# alpha-forge

./: .env.example  .gitignore  CLAUDE.md  DEVLOG.md  README.md  backtest.py  backtest_v2.py  backtest_v3.py  backtest_v4.py  backtest_v5.py  backtest_v6.py  backtest_v7.py  backtest_v8.py  pyproject.toml  run.py  run_alpaca.py
config/: credentials.yaml.template  data_layer.yaml  sp500_universe.yaml  sp500_universe_cachecomplete.yaml  v10_1_lean.yaml  v10_production_locked.yaml  v8_hybrid_architecture.yaml  v8_macro_light.yaml  v8_macroproxy_walkforward.yaml  v8_new_architecture.yaml  v8_production_locked.yaml
data/reports/: version_comparison_v1_v10.csv
journals/: daily_recap_template.json
scripts/: audit_walk_forward_backtests.py  backfill_alpha_vantage_pit.py  backfill_daily_bars.py  backfill_finbert_pit.py  backfill_intraday_bars.py  backfill_macro_fred.py  backfill_polygon_pit.py  backfill_sec_companyfacts.py  backfill_yahoo_pit.py  check_version_comparison_table.py  evaluate_intraday_alpha_from_cache.py  fix_validation_data.py  ingest_historical.py  ingest_news_sentiment.py  run_alpha_decay.py  run_factor_attribution.py  run_monte_carlo.py  run_stress_scenarios.py  run_v7_walk_forward.py  run_v8_constraint_sweep.py  run_v8_regime_splits.py  run_v8_walk_forward.py  run_version_comparison_v1_v10.py  validate_phase1.py  validate_phase2.py  validate_phase3.py  validate_phase4.py  validate_phase5.py  validate_phase6.py  validate_phase7.py  validate_phase8.py  validate_phase9.py
src/backtester/: __init__.py  engine.py  execution.py  types.py  walk_forward.py
src/compliance/: kill_switch.py
src/cpp/: CMakeLists.txt
src/cpp/include/onebrain/: circular_buffer.h  feature_engine.h  types.h  welford.h
src/cpp/src/: bindings.cpp  feature_engine.cpp
src/cpp/tests/: test_circular_buffer.cpp  test_feature_engine.cpp  test_welford.cpp
src/data/: __init__.py  adjustments.py  arctic_store.py  events.py  fundamentals.py  quality_pipeline.py  symbol_master.py  universe.py  universe_builder.py
src/engine/: __init__.py
src/execution/: __init__.py  broker.py  event_calendar.py  execution_mode.py  kill_switch.py  order_manager.py  reconciliation.py  self_trade.py  stale_data.py  wal.py
src/monitoring/: __init__.py  alerting.py  health.py  metrics.py
src/paper/: __init__.py  engine.py
src/portfolio/: __init__.py  allocator.py  attribution.py  capacity.py  hrp.py  (+2 more)
(+67 files in other folders)
